--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -8,6 +8,9 @@
   <li class="{% if page.author %}current{% endif %}">
     <a href="/blog/">Blog</a>
   <li>
+  <li class="{% if page.projects %}current{% endif %}">
+    <a href="/projects/">Featured Projects</a>
+  <li>
   <li>
     <a href="{{ site.repository }}"><span class="hide-on-mobiles">View on </span>GitHub</a>
   </li>
