--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
 <body class="wrap">
   {% include header.html %}
 
+  <div id="content">
   {{ content }}
-
+  </div>
   {% include footer.html %}
   {% include analytics.html %}
-
 </body>
 </html>
