--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,16 +3,15 @@
     {% include primary-nav-items.html %}
   </nav>
   <div class="grid">
-    <div class="unit one-third center-on-mobiles">
-      <h1>
-        <a href="/">
-          <span>Machinekit</span>
-          <img src="/images/logo-2x.png" width="249" height="115" alt="Logo">
-        </a>
-      </h1>
+      <div class="unit one-quarter hide-on-mobiles" >
+        <img id='logo' src="/images/gear-300px-grey.png"> 
+      </div>
+         
+    <div class="unit three-quarters">
+      <h1>Machinekit</h1>
+       <nav class="main-nav hide-on-mobiles">
+         {% include primary-nav-items.html %}
+       </nav>
     </div>
-    <nav class="main-nav unit two-thirds hide-on-mobiles">
-      {% include primary-nav-items.html %}
-    </nav>
   </div>
 </header>
