--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -232,7 +232,7 @@ aside h4 {
   padding: 0 0 10px 30px;
   margin-left: -30px;
   display: inline-block;
-  border-bottom: 1px solid #c00;
+  border-bottom: 1px solid #ffd75e;
 }
 
 aside ul {
@@ -249,12 +249,13 @@ aside li {
 
 aside li a {
   font-size: 16px;
-  position: relative
+  position: relative;
+  color: #008080;
 }
 
 aside li.current a:before {
   content: "";
-  border-color: transparent transparent transparent #444;
+  border-color: transparent transparent transparent #ffd75e;
   border-style: solid;
   border-width: 10px;
   width: 0;
@@ -295,7 +296,7 @@ aside li.current a:before {
   border-radius: 5px;
   /*border: 1px solid #333;*/
   box-shadow: 0 1px 3px rgba(0,0,0,.3), inset 0 1px 1px rgba(255,255,255,.5);
-  background: #777;
+  background: #008080;
 }
 
 .section-nav a:hover {
