changes to css structure

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -51,7 +51,7 @@ body > header {
   display: inline-block;
 }
 
-body > header  h1 {
+#maintitle {
     margin-top: 0.1em;
     font-weight: 700;
     font-size: 96pt;
