--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
       </div>
          
     <div class="unit three-quarters">
-      <h1>Machinekit</h1>
+      <h1 id="maintitle">Machinekit</h1>
        <nav class="main-nav hide-on-mobiles">
          {% include primary-nav-items.html %}
        </nav>
