--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -2,6 +2,9 @@
   <li class="{% if page.overview %}current{% endif %}">
     <a href="/">Home</a>
   </li>
+  <li class="{% if page.about %}current{% endif %}">
+    <a href="/about/">About</a>
+  </li>
   <li class="{% if page.url contains '/docs/' %}current{% endif %}">
     <a href="/docs/home/">
       <span class="hide-on-mobiles">Documentation</span></a>
