Shorten 'Featured Projects' to 'Projects' for mobile

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -9,7 +9,8 @@
     <a href="/blog/">Blog</a>
   <li>
   <li class="{% if page.projects %}current{% endif %}">
-    <a href="/projects/">Featured Projects</a>
+    <a href="/projects/">
+      <span class="hide-on-mobiles">Featured </span>Projects</a>
   <li>
   <li>
     <a href="{{ site.repository }}"><span class="hide-on-mobiles">View on </span>GitHub</a>
