--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,8 @@
       </div>
          
     <div class="unit three-quarters">
-      <h1 id="maintitle">Machinekit</h1>
+      <h1 id="maintitle" class="hide-on-mobiles">Machinekit</h1>
+      <h1 id="maintitle-mobile" class="show-on-mobiles">Machinekit</h1>
        <nav class="main-nav hide-on-mobiles">
          {% include primary-nav-items.html %}
        </nav>
