--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -3,7 +3,9 @@
     <a href="/">Home</a>
   </li>
   <li class="{% if page.url contains '/docs/' %}current{% endif %}">
-    <a href="/docs/home/">Doc<span class="show-on-mobiles">s</span><span class="hide-on-mobiles">umentation</span></a>
+    <a href="/docs/home/">
+      <span class="hide-on-mobiles">Documentation</span></a>
+      <span class="show-on-mobiles">Docs</span>
   </li>
   <li class="{% if page.author %}current{% endif %}">
     <a href="/blog/">Blog</a>
@@ -13,6 +15,7 @@
       <span class="hide-on-mobiles">Featured </span>Projects</a>
   <li>
   <li>
-    <a href="{{ site.repository }}"><span class="hide-on-mobiles">View on </span>GitHub</a>
+    <a href="{{ site.repository }}">
+      <span class="hide-on-mobiles">View on </span>GitHub</a>
   </li>
 </ul>
