Point 'Blog' nav item to blog.machinekit.io

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -8,7 +8,7 @@
       <span class="show-on-mobiles">Docs</span>
   </li>
   <li class="{% if page.author %}current{% endif %}">
-    <a href="/blog/">Blog</a>
+    <a href="http://blog.machinekit.io/">Blog</a>
   <li>
   <li class="{% if page.projects %}current{% endif %}">
     <a href="/projects/">
