Nav items:  remove 'Featured projects'; shorten 'View on Github'

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -10,12 +10,7 @@
   <li class="{% if page.author %}current{% endif %}">
     <a href="http://blog.machinekit.io/">Blog</a>
   <li>
-  <li class="{% if page.projects %}current{% endif %}">
-    <a href="/projects/">
-      <span class="hide-on-mobiles">Featured </span>Projects</a>
   <li>
-  <li>
-    <a href="{{ site.repository }}">
-      <span class="hide-on-mobiles">View on </span>GitHub</a>
+    <a href="{{ site.repository }}">GitHub</a>
   </li>
 </ul>
