Changes to main Documentation page
- Move main doc page permalink from docs/home/ to docs/
- Rename page to Documentation Start
- Replace content with quick description

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -6,7 +6,7 @@
     <a href="/about/">About</a>
   </li>
   <li class="{% if page.url contains '/docs/' %}current{% endif %}">
-    <a href="/docs/home/">
+    <a href="/docs/">
       <span class="hide-on-mobiles">Documentation</span></a>
       <span class="show-on-mobiles">Docs</span>
   </li>
