Fix nav-bar docs link problem
Incomplete fix for #3

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -7,8 +7,9 @@
   </li>
   <li class="{% if page.url contains '/docs/' %}current{% endif %}">
     <a href="/docs/">
-      <span class="hide-on-mobiles">Documentation</span></a>
+      <span class="hide-on-mobiles">Documentation</span>
       <span class="show-on-mobiles">Docs</span>
+    </a>
   </li>
   <li class="{% if page.author %}current{% endif %}">
     <a href="http://blog.machinekit.io/">Blog</a>
