--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -461,13 +461,9 @@ pre, code {
   }
 }
 
-.highlight, p > pre, p > code, p > nobr > code, li > code, h5 > code, .note > code {
-  background: #333;
-  color: #fff;
-  border-radius: 5px;
-  box-shadow: inset 0 1px 10px rgba(0,0,0,.3),
-    0 1px 0 rgba(255,255,255,.1),
-    0 -1px 0 rgba(0,0,0,.5);
+.highlight, p > pre, p > code, p > nobr > code, li > code, h5 > code, .note > code, a > code {
+  background: rgba(255, 204, 0, 0.28);
+  border-radius: 3px;
 }
 
 .note code {
