--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   </nav>
   <div class="grid">
       <div class="unit one-quarter hide-on-mobiles" >
-        <img id='logo' src="/images/gear-300px-grey.png"> 
+        <img id='logo' src="/images/gear-256px-color.png"> 
       </div>
          
     <div class="unit three-quarters">
