images: added favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -15,4 +15,5 @@
   <script src="/js/html5shiv.js"></script>
   <script src="/js/respond.min.js"></script>
   <![endif]-->
+  <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
