--- a/src/index.tmpl
+++ b/src/index.tmpl
@@ -44,6 +44,7 @@
 		<LI><A name="User Interfaces"></A>User Interfaces
 		<UL>
 			<LI><A HREF="gui/axis.html">Axis GUI</A>
+			<LI><A HREF="gui/gmoccapy.html">gmoccapy touchscreen GUI</A>
 			<LI><A HREF="gui/touchy.html">Touchy GUI</A>
 			<LI><A HREF="gui/ngcgui.html">NGCGUI</A>
 			<LI><A HREF="gui/tkmachinekit.html">TkMachinekit GUI</A>
