--- a/_includes/section_nav_community.html
+++ b/_includes/section_nav_community.html
@@ -1,7 +1,7 @@
-<div class="section-nav-docs">
+<div class="section-nav-community">
   <div class="left align-right">
     {% if page.prev_section != null %}
-      <a href="/docs/{{ page.prev_section }}/" class="prev">
+      <a href="/community/{{ page.prev_section }}/" class="prev">
         Back
       </a>
     {% else %}
@@ -10,7 +10,7 @@
   </div>
   <div class="right align-left">
     {% if page.next_section != null %}
-      <a href="/docs/{{ page.next_section }}/" class="next">
+      <a href="/community/{{ page.next_section }}/" class="next">
         Next
       </a>
     {% else %}
