bring back edit-this-page link

--- a/_includes/docs_contents.html
+++ b/_includes/docs_contents.html
@@ -4,6 +4,7 @@
     <h4>{{ section.title }}</h4>
     {% include docs_ul.html items=section.docs %}
     {% include search-bar.html %}
+    {% include edit-me.html %}
     {% endfor %}
   </aside>
 </div>
