--- a/_includes/community_contents.html
+++ b/_includes/community_contents.html
@@ -3,6 +3,7 @@
     {% for section in site.data.community %}
     <h4>{{ section.title }}</h4>
     {% include community_ul.html items=section.community %}
+    {% include edit-me.html %}
     {% endfor %}
   </aside>
 </div>
