--- a/_includes/edit-me.html
+++ b/_includes/edit-me.html
@@ -1,1 +1,11 @@
-<a href={{page.edit-repo-branch}}{{page.path}}>Edit this page</a>
+
+
+{% if page.edit-path %}
+
+<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.edit-path}}>OVERRIDE-Edit this page</a>
+
+{% else %}
+<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.path}}>DEFAULT-Edit this page</a>
+
+{% endif %}
+
