--- a/_includes/edit-me.html
+++ b/_includes/edit-me.html
@@ -2,10 +2,10 @@
 
 {% if page.edit-path %}
 
-<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.edit-path}}>OVERRIDE-Edit this page</a>
+<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.edit-path}}>Edit this page</a>
 
 {% else %}
-<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.path}}>DEFAULT-Edit this page</a>
+<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.path}}>Edit this page</a>
 
 {% endif %}
 
