--- a/_includes/docs_contents.html
+++ b/_includes/docs_contents.html
@@ -3,6 +3,7 @@
     {% for section in site.data.docs %}
     <h4>{{ section.title }}</h4>
     {% include docs_ul.html items=section.docs %}
+    {% include sandbox.html %}
     {% include search-bar.html %}
     {% include edit-me.html %}
     {% endfor %}
