--- a/_includes/sandbox.html
+++ b/_includes/sandbox.html
@@ -1,7 +1,7 @@
 <sandbox>
     <div class="unit align-left center-on-mobiles">
       <p>
-        <a href="sandbox/index.html"> SandBox </a>
+        <a href="http://preview.machinekit.io/docs/sandbox/index.html"> SandBox </a>
       </p>
     </div>
 </sandbox>
