--- a/_includes/search-bar.html
+++ b/_includes/search-bar.html
@@ -3,7 +3,7 @@
     <div class="unit align-left center-on-mobiles">
       <p>
         <div class="top-search">
-        <form method="get" id="searchform" id="searchbox_013132401186084955638:rss8-mkzi3u" action="http://preview.machinekit.io/search-result.html">
+        <form method="get" id="searchform" id="searchbox_013132401186084955638:rss8-mkzi3u" action="http://machinekit.io/search-result.html">
         <div>
         <input value="013132401186084955638:rss8-mkzi3u" name="cx" type="hidden"/>
         <input value="FORID:11" name="cof" type="hidden"/>
