fix "wiki.machinekit.org" links

--- a/src/index.tmpl
+++ b/src/index.tmpl
@@ -16,7 +16,7 @@
 <p></p>
 <LI><A HREF="common/overleaf.html">Machinekit Document Overleaf</A>
 <LI><A HREF="gcode.html">Machinekit G Code Quick Reference</A>
-<LI><A HREF="http://wiki.machinekit.org/cgi-bin/wiki.pl">Machinekit Wiki Community</A>
+<LI><A HREF="http://wiki.linuxcnc.org/cgi-bin/wiki.pl">Machinekit Wiki Community</A>
 <p></p>
 <LI><a name="Getting Started"></a>Getting Started with Machinekit
 	<UL>
