--- a/src/index_fr.tmpl
+++ b/src/index_fr.tmpl
@@ -16,7 +16,7 @@
 <LI>Autres langues disponibles: <A HREF="index.html">English</A> <A HREF="index_es.html">Espa&ntilde;ol</A>
 <p></p>
 <LI><A HREF="gcode_fr.html">Aide m&eacute;moire des r&eacute;f&eacute;rences du G Code</A>
-<LI><A HREF="http://wiki.machinekit.org/cgi-bin/wiki.pl">Le Wiki de la communaut&eacute; Machinekit (en anglais)</A>
+<LI><A HREF="http://wiki.linuxcnc.org/cgi-bin/wiki.pl">Le Wiki de la communaut&eacute; Machinekit (en anglais)</A>
 <p></p>
 <LI><a name="Guide de d&eacute;marrage"></a> Guide de d&eacute;marrage
 	<UL>
