add support for livereload if Jekyll environment=development
use this gist for trying it: https://gist.github.com/mhaberler/ede68eae275c38a5364734c065a1b9c0

the serve.sh script has no place here - remove

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <!--  <link rel="alternate" type="application/rss+xml" title="Jekyll • Simple, blog-aware, static sites - Feed" href="/feed.xml"> -->
 
   {% include analytics.html %}
+  {% include livereload.html %}
 
   <link rel="alternate" type="application/atom+xml" title="Recent commits to Machinekit's master branch" href="{{ site.repository }}/commits/master.atom">
   <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
