Move `Edit This Page` and `Sandbox` links to navigation area
onto same line as `Search`

The increase in RH sidebar items has pushed these items further down
the page

Moving them makes the layout more coherent, sidebar is for quick access
links to major topics

The navigation list keeps 'Edit this page' in particular, immediately
available and obvious from any page in the site

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -26,5 +26,12 @@
   <li>
     {% include search-bar.html %}
   </li>
-  
+  <li>
+    {% include sandbox.html %}
+  </li>
+  <li>
+    {% include edit-me.html %}
+  </li>
 </ul>
+
+
