--- a/_includes/edit-me.html
+++ b/_includes/edit-me.html
@@ -1,11 +1,10 @@
-
-
-{% if page.edit-path %}
-
-<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.edit-path}}>Edit this page</a>
-
-{% else %}
-<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.path}}>Edit this page</a>
-
-{% endif %}
+<div class="unit align-left center-on-mobiles">
+  <p>
+    {% if page.edit-path %}
+	<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.edit-path}}>Edit this page</a>
+    {% else %}
+	<a href={{page.edit-repo}}/edit/{{page.edit-branch}}/{{page.path}}>Edit this page</a>
+    {% endif %}
+  </p>
+</div>
 
