--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -197,6 +197,7 @@ article {
   margin: 0 10px;
   box-shadow: 0 3px 10px rgba(0,0,0,.1);
   font-size: 16px;
+  word-wrap: break-word;
 }
 article h2 {
     color: #000;
