Remove unused Sandbox title and associated files.
Replace with Commercial Support stub, for population by
whoever wants to offer some relevant service

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -27,7 +27,7 @@
     {% include search-bar.html %}
   </li>
   <li>
-    {% include sandbox.html %}
+    {% include commercial-support.html %}
   </li>
   <li>
     {% include edit-me.html %}
