Get search button to display properly

--- a/_includes/search-bar.html
+++ b/_includes/search-bar.html
@@ -1,3 +1,25 @@
+<style>
+.cse input.gsc-input, input.gsc-input ,
+input.gsc-input {
+    moz-border-radius: 0 !important;
+    webkit-border-radius: 0 !important;
+    padding-right: 68px !important;
+    padding: 5px !important;
+    border-radius: 0 !important;
+    height: 26px !important;
+}
+.cse .gsc-search-button input.gsc-search-button-v2,
+input.gsc-search-button-v2 {
+    height: 26px !important;
+    margin-top: 0 !important;
+    min-width: 13px !important;
+    padding: 5px 26px !important;
+    width: 68px !important;
+}
+
+</style>
+
+
 <script>
   (function() {
     var cx = '013132401186084955638:hpvljajpulu';
@@ -8,7 +30,6 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
   })();
-
 </script>
 
 <search-bar>
