Change google search to plain input box to get rid of clunky branding.
Add Forum search by appending search string to preset search url

Spend hours buggering about trying to get them to line up properly!

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       <h1 id="maintitle" class="hide-on-mobiles">Machinekit</h1>
       <h1 id="maintitle-mobile" class="show-on-mobiles">Machinekit</h1>
        <nav class="main-nav hide-on-mobiles">
-         {% include primary-nav-items.html %}
+         {% include primary-nav-items2.html %}
        </nav>
     </div>
   </div>
