Add Forum link to ensure display same in different browsers

--- a/_includes/primary-nav-items2.html
+++ b/_includes/primary-nav-items2.html
@@ -23,6 +23,9 @@
   <li>
     <a href="{{ site.repository }}">GitHub</a>
   </li>
+  <li">
+    <a href="https://groups.google.com/forum/#!forum/machinekit">Forum</a>
+  </li>
   <li>
     {% include search-bar.html %}
   </li>
