Switch to search outside google cse for documents
Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/_includes/primary-nav-items.html
+++ b/_includes/primary-nav-items.html
@@ -24,7 +24,7 @@
     <a href="{{ site.repository }}">GitHub</a>
   </li>
   <li>
-    {% include search-bar.html %}
+    {% include document-search.html %}
   </li>
   <li>
     {% include commercial-support.html %}
