--- a/_includes/primary-nav-items2.html
+++ b/_includes/primary-nav-items2.html
@@ -27,7 +27,7 @@
     <a href="https://groups.google.com/forum/#!forum/machinekit">Forum</a>
   </li>
   <li>
-    {% include search-bar.html %}
+    {% include document-search.html %}
   </li>
   <li>
     {% include forum-search.html %}
