--- a/_includes/forum-search.html
+++ b/_includes/forum-search.html
@@ -1,10 +1,12 @@
 <script type="text/javascript">
     function goToPage() {
         var page = document.getElementById("uniqA45DE").value;
-	var base = "https://www.google.co.uk/search?&q=site%3Agroups.google.com%2Fd%2Fmsg%2Fmachinekit%2F%20";
-	var full = base + page;
-        window.open(full);
-	
+	var base1 = "https://www.google.co.uk/search?&q=site%3Agroups.google.com%2Fd%2Fmsg%2Fmachinekit%2F%20";
+	var base2 = "https://www.google.co.uk/search?&q=site%3Amachinekit.io%2Fdocs%2F%20";
+	var full = base1 + page;
+	var full2 = base2 + page;
+	window.open(full);
+	window.open(full2);
     }
 </script>
 
@@ -14,7 +16,7 @@
         <div class="forum-search">
 	<p>
         <form>
-	    <input type="text" placeholder="Search Forum..." name="uniqA45DE" size="10" id="uniqA45DE" onkeypress="if (event.keyCode == 13) { goToPage(); return false;}" />
+	    <input type="text" placeholder="Search ..." name="uniqA45DE" size="10" id="uniqA45DE" onkeypress="if (event.keyCode == 13) { goToPage(); return false;}" />
         </form>
         </p>
 	</div>
