--- a/_includes/primary-nav-items2.html
+++ b/_includes/primary-nav-items2.html
@@ -30,6 +30,9 @@
     {% include forum-search.html %}
   </li>  
   <li>
+    {% include search-radio.html %}
+  </li>  
+  <li>
     {% include commercial-support.html %}
   </li>
   <li>
